cmake_minimum_required(VERSION 3.5)
project(int23_t VERSION 0.0.1 DESCRIPTION "Since 23 is holy, we created int23_t")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
file(GLOB SOURCES src/*.cpp)
set_target_properties(int23_t PROPERTIES VERSION ${PROJECT_VERSION})
include_directories(include)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDEDIR})
file(GLOB HEADERS include/*.hpp)
install(FILEA ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
